istiofiles/vs-cheese-quizz-question-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cheese-quizz-question
spec:
  hosts:
  - cheese-quizz-question
  http:
  - route:
    - destination:
        host: cheese-quizz-question
        subset: v1

oc autoscale Deployment/lamp-apache --min 1 --max 4 --cpu-percent=20 -n app2

oc autoscale Deployment/lamp-php-fpm --min 1 --max 4 --cpu-percent=20


oc create -f manifests/quizz-client-buildconfig.yml -n cheese-quizz
oc create -f manifests/quizz-client-deploymentconfig.yml -n cheese-quizz
oc create -f manifests/quizz-client-service.yml -n cheese-quizz
oc create -f manifests/quizz-client-route.yml -n cheese-quizz
oc rollout latest cheese-quizz-client -n cheese-quizz
