istiofiles/ap-cheese-quizz-deny-all.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
spec:
  selector:
   matchLabels:
     version: v1
